<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:id="@+id/infoHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_gravity="bottom"
            android:background="@color/purple_200"
            android:alpha="0.7"
            android:orientation="horizontal"
            android:gravity="end"
            >

            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                >

                <TextView
                    android:id="@+id/infoBookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harry_potter"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="36dp"
                    />

                <TextView
                    android:id="@+id/infoBookAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_j_k_rowling"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:id="@+id/infoBookReleased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/released_8_august_2002"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:id="@+id/infoBookDownloads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/downloaded_234_users"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    />

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="192dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            >

            <ImageView
                android:id="@+id/infoBookImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars"
                />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/infoDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/infoHeaderLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:gravity="center"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/infoBookPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atria"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/infoBookRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank_number"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="end"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contributor"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/infoBookContributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contributor_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/infoDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoDetailLayout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_description"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_baseline_attach_file_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textColor="@android:color/darker_gray"
            android:lineHeight="24sp"
            android:layout_marginTop="16dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/infoPurchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoDescriptionLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>