<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <HorizontalScrollView
        android:id="@+id/homeHorizontalScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/homeChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:singleSelection="true"
            >

            <com.google.android.material.chip.Chip
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textAlignment="center"
                android:textColor="@drawable/selector_chip_text"
                android:backgroundTint="@drawable/selector_chip_background"
                app:rippleColor="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/fantasy"
                android:textAlignment="center"
                android:textColor="@drawable/selector_chip_text"
                android:backgroundTint="@drawable/selector_chip_background"
                app:rippleColor="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/fiction"
                android:textAlignment="center"
                android:textColor="@drawable/selector_chip_text"
                android:backgroundTint="@drawable/selector_chip_background"
                app:rippleColor="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/horror"
                android:textAlignment="center"
                android:textColor="@drawable/selector_chip_text"
                android:backgroundTint="@drawable/selector_chip_background"
                app:rippleColor="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/novel"
                android:textAlignment="center"
                android:textColor="@drawable/selector_chip_text"
                android:backgroundTint="@drawable/selector_chip_background"
                app:rippleColor="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/poetry"
                android:textAlignment="center"
                android:textColor="@drawable/selector_chip_text"
                android:backgroundTint="@drawable/selector_chip_background"
                app:rippleColor="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/romance"
                android:textAlignment="center"
                android:textColor="@drawable/selector_chip_text"
                android:backgroundTint="@drawable/selector_chip_background"
                app:rippleColor="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/homeHorizontalScroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>