<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:cardCornerRadius="8dp"
        >

        <ImageView
            android:id="@+id/itemBookImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/itemBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harry_potter"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/itemBookWriter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j_k_rowling"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/itemBookPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_22_00"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        />

</LinearLayout>